--- a/johnblog/output/galleries/ews-front/index.html
+++ b/johnblog/output/galleries/ews-front/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="John Preston blog"><meta name="author" content="John Mille [John Preston]"><title>ews-front | EWS Network</title><link href="../../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"><link href="../../assets/css/rst.css" rel="stylesheet" type="text/css"><link href="../../assets/css/code.css" rel="stylesheet" type="text/css"><link href="../../assets/css/colorbox.css" rel="stylesheet" type="text/css"><link href="../../assets/css/theme.css" rel="stylesheet" type="text/css"><!--[if lt IE 9]>
+<!DOCTYPE html><html lang="en"><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="author" content="John Mille [John Preston]"><title>ews-front | EWS Network</title><link href="../../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"><link href="../../assets/css/rst.css" rel="stylesheet" type="text/css"><link href="../../assets/css/code.css" rel="stylesheet" type="text/css"><link href="../../assets/css/colorbox.css" rel="stylesheet" type="text/css"><link href="../../assets/css/theme.css" rel="stylesheet" type="text/css"><!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]--><link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml"><style type="text/css">
     .image-block {
@@ -35,10 +35,10 @@
         <li><a href="#">ews-front</a></li>
 </ul><ul></ul><div id="gallery_container"></div>
     <noscript>
-    <ul class="thumbnails"><li><a href="../../../galleries/ews-front/Rackspace.png" class="thumbnail image-reference" title="Galleries/ews front/rackspace">
-                <img src="Rackspace.thumbnail.png" alt="Galleries/ews front/rackspace"></a>
-            </li><li><a href="../../../galleries/ews-front/amazon-aws.png" class="thumbnail image-reference" title="Galleries/ews front/amazon aws">
+    <ul class="thumbnails"><li><a href="../../../galleries/ews-front/amazon-aws.png" class="thumbnail image-reference" title="Galleries/ews front/amazon aws">
                 <img src="amazon-aws.thumbnail.png" alt="Galleries/ews front/amazon aws"></a>
+            </li><li><a href="../../../galleries/ews-front/Rackspace.png" class="thumbnail image-reference" title="Galleries/ews front/rackspace">
+                <img src="Rackspace.thumbnail.png" alt="Galleries/ews front/rackspace"></a>
     </li></ul></noscript>
 
         </div>
@@ -58,7 +58,7 @@
 </li><li><a class="addthis_button_twitter"></a>
 </li></ul></div>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"></script><!-- End of social buttons --><script type="text/javascript">jQuery("a.image-reference").colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script><script src="../../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [{"url": "../../../galleries/ews-front/Rackspace.png", "title": "Galleries/ews front/rackspace", "size": {"h": 233, "w": 600}, "url_thumb": "Rackspace.thumbnail.png"}, {"url": "../../../galleries/ews-front/amazon-aws.png", "title": "Galleries/ews front/amazon aws", "size": {"h": 90, "w": 180}, "url_thumb": "amazon-aws.thumbnail.png"}];
+jsonContent = [{"url": "../../../galleries/ews-front/amazon-aws.png", "title": "Galleries/ews front/amazon aws", "size": {"h": 90, "w": 180}, "url_thumb": "amazon-aws.thumbnail.png"}, {"url": "../../../galleries/ews-front/Rackspace.png", "title": "Galleries/ews front/rackspace", "size": {"h": 233, "w": 600}, "url_thumb": "Rackspace.thumbnail.png"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
