bf EBS tutorial finished Generic SAN Adapter imported from Joomla

--- a/johnblog/output/galleries/index.html
+++ b/johnblog/output/galleries/index.html
@@ -33,6 +33,7 @@
     
 <ul class="breadcrumb"><li><a href="#">galleries</a></li>
 </ul><ul><li><a href="ews-front"><i class="icon-folder-open"></i> ews-front</a></li>
+        <li><a href="eucalyptus"><i class="icon-folder-open"></i> eucalyptus</a></li>
     </ul><div id="gallery_container"></div>
     <noscript>
     <ul class="thumbnails"></ul></noscript>
