--- a/johnblog/output/stories/create-a-bf-ebs-with-eucalyptus.html
+++ b/johnblog/output/stories/create-a-bf-ebs-with-eucalyptus.html
@@ -59,6 +59,17 @@ admin@clc-0 <span class="nv">$&gt;</span>euca-create-volume -s 5 -z cluster <spa
 <p class="first admonition-title">Attention!</p>
 <p class="last">You will need to use the init scripts provided by Eucalyptus or create your own to have SSH-Key based access and other functions.</p>
 </div>
+<div class="section" id="before-creating-our-vm">
+<h4>Before creating our VM</h4>
+<p>I advice you to enable graphical access (via VNC) to the VM created by Eucalyptus. To do so, uncomment vnc section in /etc/eucalyptus/libvirt.xsl :</p>
+<pre class="code xml literal-block">
+<span class="nt">&lt;graphics</span> <span class="na">type=</span><span class="s">'vnc'</span> <span class="na">port=</span><span class="s">'-1'</span> <span class="na">autoport=</span><span class="s">'yes'</span> <span class="na">keymap=</span><span class="s">'en-us'</span><span class="nt">/&gt;</span>
+</pre>
+<p>Restart the Node controller service (If you have running VMs on it, this <strong>will not</strong> stop them)</p>
+<pre class="code bash literal-block">
+sudo service eucalyptus-nc restart
+</pre>
+</div>
 </div>
 <div class="section" id="second-case">
 <h3>Second case</h3>
@@ -72,19 +83,9 @@ admin@clc-0 <span class="nv">$&gt;</span>euca-run-instances <span class="nv">$EM
 <div class="section" id="use-virt-manager">
 <h4>Use virt-manager</h4>
 <p>I am a shell guy, mean I do everything in shell windows, but it is also true to say that GUI have a lot of benefits. Here, what we are going to do is to use virt-manager. It is a very powerful tool to manage KVM / XEN on remote and redirect all through SSH. So, here I am on a CentOS client with graphical interface. Be sure to have ssh access to your NC.</p>
-<div class="section" id="before-creating-our-vm">
-<h5>Before creating our VM</h5>
-<p>I advice you to enable graphical access (via VNC) to the VM created by Eucalyptus. To do so, uncomment vnc section in /etc/eucalyptus/libvirt.xsl :</p>
-<pre class="code xml literal-block">
-<span class="nt">&lt;graphics</span> <span class="na">type=</span><span class="s">'vnc'</span> <span class="na">port=</span><span class="s">'-1'</span> <span class="na">autoport=</span><span class="s">'yes'</span> <span class="na">keymap=</span><span class="s">'en-us'</span><span class="nt">/&gt;</span>
-</pre>
-<p>Restart the Node controller service (If you have running VMs on it, this <strong>will not</strong> stop them)</p>
-<pre class="code bash literal-block">
-sudo service eucalyptus-nc restart
-</pre>
 </div>
 <div class="section" id="use-ssh-keys">
-<h5>Use ssh-keys</h5>
+<h4>Use ssh-keys</h4>
 <p>For any action made by virt-manager, you will be prompted for your password. To avoid this and guarantee a full secured permanent access, use ssh-keys : generate a ssh-key for your current user, then, sync it for the root user on your NC :</p>
 <pre class="code bash literal-block">
 user@client <span class="nv">$&gt;</span>ssh-keygen -t rsa -b 4096
@@ -101,8 +102,9 @@ user@client <span class="nv">$&gt;</span>ssh-copy-id -i <span class="nv">$HOME</
 </div>
 </div>
 </div>
-<div class="section" id="create-on-vm">
-<h4>Create on VM</h4>
+</div>
+<div class="section" id="run-our-new-emi">
+<h2>Run our new EMI</h2>
 <p>Here we are ! That's the usual way to install a new operating system. You will be able to assign the values you want to your original VM.</p>
 <div class="warning">
 <p class="first admonition-title">Warning</p>
@@ -118,12 +120,11 @@ user@client <span class="nv">$&gt;</span>ssh-copy-id -i <span class="nv">$HOME</
 </ul></li>
 </ul></div>
 </div>
-</div>
 <div class="section" id="prepare-our-fresh-vm-for-eucalyptus">
-<h3>Prepare our fresh VM for Eucalyptus</h3>
+<h2>Prepare our fresh VM for Eucalyptus</h2>
 <p>Our setup is finished, and after reboot we are glad to see our system running properly. But, it is a too specific one. So here we are going to "clean" this VM to be the most generic possible. We also are going to setup all our usual packages.</p>
 <div class="section" id="on-linux">
-<h4>On linux</h4>
+<h3>On linux</h3>
 <p>At startup, you system created some "rules" which come from your hardware configuration. We need to delete this, because all the instances you will create from this EMI will have different properties (i.e. the eth0 MAC address). So begin with deleting these rules :</p>
 <pre class="code bash literal-block">
 rm -rfv /etc/udev/rules.d/* <span class="c"># rules usually are in the same directory for most common distros. Specifyt this path according to yours.</span>
@@ -142,9 +143,8 @@ rm -rfv /etc/ssh/ssh_host_*
 </pre>
 </div>
 <div class="section" id="on-windows">
-<h4>On Windows</h4>
+<h3>On Windows</h3>
 <p>There are tools available on eucalyptus documentation website which will allow your to clean your EMI in addition to a sysprep</p>
-</div>
 </div>
 <div class="section" id="at-that-moment">
 <h3>At that moment</h3>
@@ -212,17 +212,17 @@ root@nc-0<span class="nv">$ </span>&gt;rsync -e <span class="s1">'ssh -i $HOME/c
 <p>If your VM is running properly, you can reach it and log onto, you have your EBS backed instance !!!
 So now if you plan to make new EBS backed with any other tools on it (Web Server or anything else), run a VM from the EMI you've just done,
 do your stuff, register, snap it and register it (Do not forget to clean it !)</p>
+</div>
 <div class="section" id="frequently-asked-questions">
-<h3>Frequently asked questions</h3>
+<h2>Frequently asked questions</h2>
 <p>Once you have this EMI, a lot of questions may come. Here I tried to summerise the most frequently asked.</p>
 <div class="section" id="question">
-<h4>Question :</h4>
+<h3>Question</h3>
 <p><em>If I do changes on a VM from my EBS EMI, will all the others have the changes too ?</em></p>
 </div>
 <div class="section" id="answer">
-<h4>Answer :</h4>
+<h3>Answer</h3>
 <p><strong>No</strong>. The EBS of your Instance has been copied from the snapshot, but you are not running your VM from the snapshot itsself. To keep any change on your VM for future VMs, clean, stop, snap and register it. Then, all the new instances you will run from this newly created EMI will have your changes.</p>
-</div>
 </div>
 </div>
 
