Log with RSyslog

--- a/johnblog/output/galleries/index.html
+++ b/johnblog/output/galleries/index.html
@@ -32,7 +32,8 @@
             
     
 <ul class="breadcrumb"><li><a href="#">galleries</a></li>
-</ul><ul><li><a href="ews-front"><i class="icon-folder-open"></i> ews-front</a></li>
+</ul><ul><li><a href="linux"><i class="icon-folder-open"></i> linux</a></li>
+        <li><a href="ews-front"><i class="icon-folder-open"></i> ews-front</a></li>
         <li><a href="eucalyptus"><i class="icon-folder-open"></i> eucalyptus</a></li>
     </ul><div id="gallery_container"></div>
     <noscript>
