--- a/johnblog/output/galleries/index.html
+++ b/johnblog/output/galleries/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="author" content="John Mille [John Preston]"><title>galleries | EWS Network</title><link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"><link href="../assets/css/rst.css" rel="stylesheet" type="text/css"><link href="../assets/css/code.css" rel="stylesheet" type="text/css"><link href="../assets/css/colorbox.css" rel="stylesheet" type="text/css"><link href="../assets/css/theme.css" rel="stylesheet" type="text/css"><!--[if lt IE 9]>
+<!DOCTYPE html><html lang="en"><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="author" content="John Mille [John Preston]"><title>galleries | Admin Blog</title><link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"><link href="../assets/css/rst.css" rel="stylesheet" type="text/css"><link href="../assets/css/code.css" rel="stylesheet" type="text/css"><link href="../assets/css/colorbox.css" rel="stylesheet" type="text/css"><link href="../assets/css/theme.css" rel="stylesheet" type="text/css"><!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]--><link rel="alternate" type="application/rss+xml" title="RSS" href="../rss.xml"><style type="text/css">
     .image-block {
@@ -17,7 +17,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="../">EWS Network</a>
+        <a class="navbar-brand" href="../">Admin Blog</a>
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav"><li><a href="../archive.html">Archives</a>
@@ -32,9 +32,9 @@
             
     
 <ul class="breadcrumb"><li><a href="#">galleries</a></li>
-</ul><ul><li><a href="linux"><i class="icon-folder-open"></i> linux</a></li>
+</ul><ul><li><a href="eucalyptus"><i class="icon-folder-open"></i> eucalyptus</a></li>
+        <li><a href="linux"><i class="icon-folder-open"></i> linux</a></li>
         <li><a href="ews-front"><i class="icon-folder-open"></i> ews-front</a></li>
-        <li><a href="eucalyptus"><i class="icon-folder-open"></i> eucalyptus</a></li>
     </ul><div id="gallery_container"></div>
     <noscript>
     <ul class="thumbnails"></ul></noscript>
