--- a/johnblog/output/stories/create-a-bf-ebs-with-eucalyptus.html
+++ b/johnblog/output/stories/create-a-bf-ebs-with-eucalyptus.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Tutorial to create a bfEBS EMI for Eucalyptus"><meta name="author" content="John Mille [John Preston]"><title>Create a bf EBS with Eucalyptus | EWS Network</title><link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"><link href="../assets/css/rst.css" rel="stylesheet" type="text/css"><link href="../assets/css/code.css" rel="stylesheet" type="text/css"><link href="../assets/css/colorbox.css" rel="stylesheet" type="text/css"><link href="../assets/css/theme.css" rel="stylesheet" type="text/css"><!--[if lt IE 9]>
+<!DOCTYPE html><html lang="en"><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Tutorial to create a bfEBS EMI for Eucalyptus"><meta name="author" content="John Mille [John Preston]"><title>Create a bf EBS with Eucalyptus | Admin Blog</title><link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"><link href="../assets/css/rst.css" rel="stylesheet" type="text/css"><link href="../assets/css/code.css" rel="stylesheet" type="text/css"><link href="../assets/css/colorbox.css" rel="stylesheet" type="text/css"><link href="../assets/css/theme.css" rel="stylesheet" type="text/css"><!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]--><link rel="alternate" type="application/rss+xml" title="RSS" href="../rss.xml"></head><body>
 <!-- Menubar -->
@@ -10,18 +10,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="../">EWS Network</a>
+        <a class="navbar-brand" href="../">Admin Blog</a>
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav"><li><a href="../archive.html">Archives</a>
                 </li><li><a href="../categories/index.html">Tags</a>
                 </li><li><a href="../rss.xml">RSS</a>
 
-        </li></ul><ul class="nav navbar-nav navbar-right"><li>
-    <a href="create-a-bf-ebs-with-eucalyptus.rst" id="sourcelink">Source</a>
-    </li>
-
-        </ul></div><!-- /.navbar-collapse -->
+        </li></ul><ul class="nav navbar-nav navbar-right"></ul></div><!-- /.navbar-collapse -->
 </nav><!-- End of Menubar --><div class="container">
     <div class="body-content">
         <!--Body content-->
